final changes to pages

--- a/index.html
+++ b/index.html
@@ -25,16 +25,43 @@
 <!-- Main content -->
 
 <div class="container">
-<h1>AI-Generated Music</h1>
+<h1>Home Page - AI-Generated Music</h1>
+<img src="images/music.jpeg" alt="AIMUSIC" width="400px">
+
+<h2>Technology/topic</h2>
+<ul>
+    <li>What is AI-Generated Music?</li>
+    <li>What does it mean to expedite and streamline the creation of music?</li>
+    <li>How will AI impact artists, record labels, and fans?</li>
+  </ul>
+
+<h2>Opportunities</h2>
+<ul>
+  <li>Faster and Efficient Music Production </li>
+  <li>Personalized Music Recommendations</li>
+  <li>Using AI to Enhance Live Performances</li>
+  <li>Improving Mental Health</li>
+</ul>
+
+<h2>Risks</h2>
+<ul>
+  <li>Lack of Originality</li>
+  <li>Job losses</li>
+  <li>Copyright Issues</li>
+  <li>Diminished Craftsmanship</li>
+</ul>
+
+<h2>Choices</h2>
+<ul>
+  <li>AI Artists Collaborating with Real Artists</li>
+  <li>Establishment of Appropriate Guidelines and Standards</li>
+  <li>Streaming Services for AI Artists</li>
+  <li>Producers and Songwriters using AI to Experiment with Different Artist Vocals.</li>
+</ul>
+
+<h2><a href=https://github.com/AidanKing04/Group0509-Assignment3.github.io>Portfolio Repository: Group 0509</a></h2>    
 
 
-</ul><p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
-
-
-<!-- Sign and date the page, it's only polite! -->
 
 </div>
 <address>Made 4 June 2023<br>
