--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -51,7 +51,7 @@
 		<td>King</td>
 		<td>Aidan</td>
         <td>22176443</td>	
-		<td>h</td>
+		<td>Submitted Individually through canvas submission.</td>
    </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 2</th>
@@ -65,19 +65,14 @@
         <td>Salman</td>
 		<td>Tahir</td>
         <td>21135903</td>
-		<td>h</td>
+		<td>Submitted Individually through canvas submission.</td>
     </tr>
 	</body>  
 </table>
-<hr/>
 
-<h5>Link to group Repository: <a href=https://github.com/AidanKing04/Assignment3.github.io>Portfolio Repository: Group 0509</a>  </h5>
-    
-
-  <hr/>
 </div>
 
-<address>Made 4 June 2023<br>
+<address>Made 9 June 2023<br>
 	by Group 0509</address>
   </body>
   </html>
