--- a/misc/meetings.html
+++ b/misc/meetings.html
@@ -26,20 +26,24 @@
 
 
 
+  <div class="container">
+<h1>Meeting Minutes</h1>
 
-<h1>Meeting Minutes</h1><br>
+
+<h4>Team name: Group 0509</h4>
+
+<h2>Group Meetings: </h2>
+
+<p>In order to discuss our assignment and communicate as a team we created an Instagram group chat which we also used to plan and organize meetings, as seen in reference images below</p>
+<img src="../images/group1" alt="group" width="300px">
+<img src="../images/group2" alt="group" width="650px">
+
+<p>We utilized the dedicated class time to work together on the assignment as well as meeting up outside of class to discuss the assignment and check up on everybodys progress and what each members next steps were.</p>
 
 
-<h4><p>Team name ____________________________________________________</p></h4>
-
-<h4><p>Team Coordinator/Leader ______________________________________</p></h4>
-		
-
-  <a href="https://canvas.aut.ac.nz/courses/1048/discussion_topics/3449" Meeting Minutes Repository Alternative Link</a>      
-
-  
 
 <hr/>
-<p><h6><em>Note: the preferred option will be to replace these links in your site with equivalent links to your repository e.g. Canvas discussion Board pages or Dropbox links</h6></em></p>
+
+</div>	
 </body>
 </html>
