--- a/misc/team-formation.html
+++ b/misc/team-formation.html
@@ -29,8 +29,6 @@
   <div class="container">
 <h1>Team Formation Form</h1>
 
-<h4>Due Date: Friday 9th June  </h4>
-
 <h4>Team name: Group 0509</h4>
 		
 <table>
@@ -71,6 +69,84 @@
     </tr>
 	</body>  
 </table>
+
+
+<table>
+    <p>
+	<body>
+	
+	<tr><th>Team Member Details</th>
+    
+        
+        <th scope="col" class="last name">Last Name</th> 
+	    <th scope="col" class="first name">First Name</th> 
+        <th scope="col" class="id">Student ID</th>
+        <th scope="col" class="id">Sign-Off on Team Contract</th>	
+
+    </tr>
+	<hr />
+
+    <h2>Team Contract</h2>
+    <h4>Code of Conduct:  As a project team, we will: </h4>
+    <ul>
+        <li>Treat our team members respectfully and fairly.</li>
+        <li>Value each other's input without discrimination.</li>
+        <li>Act in the best interest for the success of our project.</li>
+      </ul>
+    <h4>Participation: We will: </h4>
+    <ul>
+        <li>Divide the workload amongst ourselves to ensure fair contribution.</li>
+        <li>Set aside time during the week to work on the project.</li>
+        <li>Follow the assignment's brief correctly.</li>
+      </ul>
+    <h4>Communication: We will: </h4>
+    <ul>
+        <li>Set up a group chat to communicate on a weekly basis.</li>
+        <li>Discuss the progress of our project and make sure everyone is fulfilling their roles and responsibilities to meet
+          the requirements of the project.</li>
+      </ul>
+    <h4>Problem Solving: We will: </h4>
+    <ul>
+        <li>Ask for assistance and guidance when necessary.</li>
+        <li>Use appropriate resources to guide our research.</li>
+      </ul>
+    <h4>Meeting Guidelines: We will: </h4>
+    <ul>
+        <li>Actively respond to the group chat.</li>
+        <li>Follow up with each other with regards to the progress of our work.</li>
+      </ul>
+
+	</p>
+
+    <h4>Signed by:</h4>
+	
+	<p align = "left"</p>
+	<tr><th scope="row">Team Member 1</th>
+		<td>King</td>
+		<td>Aidan</td>
+        <td>22176443</td>	
+        <td>Aidan King</td>
+
+   </tr>
+	<p align = "left"</p>
+	<tr><th scope="row">Team Member 2</th>
+        <td>Sara</td>
+		<td>Khalaf</td>
+        <td>15906632</td>	
+        <td>Sara Khalaf</td>
+
+    </tr>
+	<p align = "left"</p>
+	<tr><th scope="row">Team Member 3</th>
+        <td>Salman</td>
+		<td>Tahir</td>
+        <td>21135903</td>
+        <td>Salman Tahir</td>
+
+    </tr>
+	</body>  
+</table>
+
 
 
 <hr/>
