--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -62,8 +62,8 @@
     </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 3</th>
-        <td>Salman</td>
-		<td>Tahir</td>
+        <td>Khawaja </td>
+		<td>Salman</td>
         <td>21135903</td>
 		<td>Submitted Individually through canvas submission.</td>
     </tr>
