--- a/misc/team-formation.html
+++ b/misc/team-formation.html
@@ -55,15 +55,15 @@
    </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 2</th>
-        <td>Sara</td>
-		<td>Khalaf</td>
+        <td>Khalaf</td>
+		<td>Sara</td>
         <td>15906632</td>	
 
     </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 3</th>
-        <td>Salman</td>
-		<td>Tahir</td>
+        <td>Khawaja </td>
+		<td>Salman </td>
         <td>21135903</td>
 
     </tr>
@@ -130,16 +130,16 @@
    </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 2</th>
-        <td>Sara</td>
-		<td>Khalaf</td>
+        <td>Khalaf</td>
+		<td>Sara</td>
         <td>15906632</td>	
         <td>Sara Khalaf</td>
 
     </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 3</th>
-        <td>Salman</td>
-		<td>Tahir</td>
+        <td>Khawaja </td>
+		<td>Salmar</td>
         <td>21135903</td>
         <td>Salman Tahir</td>
 
