--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -137,15 +137,15 @@
 	   </tr>
 		<p align = "left"</p>
 		<tr><th scope="row">Team Member 2</th>
-			<td>Sara</td>
 			<td>Khalaf</td>
+			<td>Sara</td>
 			<td>15906632</td>	
 	
 		</tr>
 		<p align = "left"</p>
 		<tr><th scope="row">Team Member 3</th>
+			<td>Khawaja </td>
 			<td>Salman</td>
-			<td>Tahir</td>
 			<td>21135903</td>
 	
 		</tr>
